# mr_rust_graphics

./: Cargo.toml  README.md
tutorial1_window/: Cargo.toml
tutorial1_window/src/: lib.rs
tutorial2_surface/: Cargo.toml
tutorial2_surface/src/: lib.rs
tutorial3_pipeline/: Cargo.toml  index.html
tutorial3_pipeline/src/: lib.rs
tutorial3_pipeline_challenge/: Cargo.toml
tutorial3_pipeline_challenge/src/: challenge_shader.wgsl  lib.rs  main.rs  shader.wgsl
tutorial4_buffers/: Cargo.toml
tutorial4_buffers/src/: lib.rs  main.rs  shader.wgsl
tutorial4_buffers_challenge/: Cargo.toml
tutorial4_buffers_challenge/src/: lib.rs  main.rs
tutorial5_textures/: Cargo.toml
tutorial5_textures/src/: lib.rs
tutorial5_textures_challenge/: Cargo.toml
tutorial5_textures_challenge/src/: lib.rs  main.rs  shader.wgsl
tutorial6_3dcamera/: Cargo.toml
tutorial6_3dcamera/src/: lib.rs  main.rs
tutorial6_3dcamera_challenge/: Cargo.toml
tutorial6_3dcamera_challenge/src/: lib.rs  main.rs  shader.wgsl  texture.rs
tutorial7_instancing/: Cargo.toml
tutorial7_instancing/src/: lib.rs  main.rs
tutorial7_instancing_challenge/: Cargo.toml
tutorial7_instancing_challenge/src/: lib.rs  main.rs
tutorial8_depth/: Cargo.toml
tutorial8_depth/src/: lib.rs  main.rs
tutorial8_depth_challenge/: Cargo.toml
tutorial8_depth_challenge/src/: lib.rs  main.rs  texture.rs
tutorial9_models/: Cargo.toml  build.rs
tutorial9_models/src/: lib.rs  model.rs  resources.rs  shader.wgsl
wgpu02/: Cargo.toml
wgpu02/src/: main.rs
