[workspace]
members = [
    "tutorial1_window", 
    "tutorial2_surface", 
    "tutorial3_pipeline", 
    "tutorial3_pipeline_challenge", 
    "tutorial4_buffers", 
    "tutorial4_buffers_challenge",
    "tutorial5_textures",
    "tutorial5_textures_challenge",
    "tutorial6_3dcamera",
    "tutorial6_3dcamera_challenge",
    "tutorial7_instancing",
    "tutorial7_instancing_challenge",
    "tutorial8_depth",
    "tutorial8_depth_challenge",
    ]
resolver = "2"

[workspace.dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
cfg-if = "1"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"