[package]
name = "tutorial3_pipeline"
version = "0.1.0"
edition = "2021"

[lib]
# we want to allow our crate to build a native Rust static library and a C/C++ compatible library
crate-type = ["cdylib", "rlib"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
cfg-if = { workspace = true }
pollster = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}