[package]
name = "wgpu02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = "1.14.0"
cgmath = "0.18.0"
env_logger = "0.10.0"
futures = "0.3.28"
gfx-hal = "0.9.0"
image = "0.24.7"
log = "0.4.20"
pollster = "0.3.0"
rand = "0.8.5"
wgpu = "0.17.1"
winit = "0.28.7"
